# Minesweeper

./: .gitignore  0001-buttons-pass-custom-flags-to-buttons.patch  0001-imgui-allow-flags-in-button-usage.patch  CMakeLists.txt  LICENSE  Makefile  README.md  compile_commands.json  imgui.ini  main.cpp  run  setup
doc/: config
imgui/: imgui.h  imgui_widgets.cpp
src/: Application.cpp  Application.h  Board.cpp  Board.h  CMakeLists.txt  Icon.h  Layer.h  Minesweeper.h  Status.cpp  Status.h  Tile.cpp  Tile.h
src/board/: Board.cpp  Board.h  CMakeLists.txt  Tile.cpp  Tile.h
src/board/app/: Application.cpp  Application.h  CMakeLists.txt  Layer.h
src/board/image/: CMakeLists.txt  Icon.cpp  Icon.h  IconPool.cpp  IconPool.h
src/board/records/: DynamicPriorityQueue.h  PQueue.h
src/status/: CMakeLists.txt  Status.cpp  Status.h
